# layers

./: reademe.md  readme.md  stats.md  threads.md  todo.md
api/: readme.md  requirements.txt  routes.py  schemas.py  test_examples.py
api/app/: auth.py  db.py  models.py  routes.py  schemas.py  util.py
api/examples/: asset_container.json  facility_aluminum_smelter.json  facility_cement_plant.json  facility_electric_substation.json  resource_coalfield.json  west_berkeley.json
api/schemas/: observation_schema.json
nomad/: api_job.hcl  nomad.hcl  rabbitmq_job.hcl  readme.md
platon/: process.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  auth.py  db.py  models.py  schemas.py  util.py
